css and html tree
- added missing logos
- added additional html trees
- added header styling

--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <script src="https://kit.fontawesome.com/90f54d6ddf.js" crossorigin="anonymous"></script>
-    <link rel="stylesheet" href="css/reset.css">
-    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="src/css/reset.css">
+    <link rel="stylesheet" href="src/css/style.css">
     <title>WitFlix</title>
 </head>
 <body>
@@ -20,7 +20,10 @@
             <a href="/">Topic 4</a>
         </nav>
         <div class="search">
-            <input type="search" placeholder="Search">
+            <div class="search-bar">
+                <input type="search" placeholder="Search...">
+                <i class="fa-solid fa-magnifying-glass"></i>
+            </div>
             <i class="fa-solid fa-bell bell"></i>
             <img class="profile" src="src/images/avatar.png" alt="profile-pic">
         </div>
@@ -45,7 +48,7 @@
             </ul>
             <div class=>
                 <button class="btn-lg">
-                    <i></i>
+                    <i class="fa-solid fa-play"> Play Now</i>
                 </button>
             </div>
         </div>
@@ -62,11 +65,29 @@
                     <div class="suggestion-item-content">
                         <h3>h3</h3>
                         <div class="suggestion-details"></div>
-                        <div><button class="btn-md"></button></div>
+                        <div><button class="btn-md">
+                            <i class="fa-solid fa-play"> Play Now</i>
+                        </button></div>
                     </div>
                 </div>
-                <div class="suggestion-item"></div>
-                <div class="suggestion-item"></div>
+                <div class="suggestion-item">
+                    <div class="suggestion-item-content">
+                        <h3>h3</h3>
+                        <div class="suggestion-details"></div>
+                        <div><button class="btn-md">
+                            <i class="fa-solid fa-play"> Play Now</i>
+                        </button></div>
+                    </div>
+                </div>
+                <div class="suggestion-item">
+                    <div class="suggestion-item-content">
+                        <h3>h3</h3>
+                        <div class="suggestion-details"></div>
+                        <div><button class="btn-md">
+                            <i class="fa-solid fa-play"> Play Now</i>
+                        </button></div>
+                    </div>
+                </div>
             </div>
         </div>
         <div class="suggestions-row">
@@ -79,11 +100,29 @@
                     <div class="suggestion-item-content">
                         <h3>h3</h3>
                         <div class="suggestion-details"></div>
-                        <div><button class="btn-md"></button></div>
+                        <div><button class="btn-md">
+                            <i class="fa-solid fa-play"> Play Now</i>
+                        </button></div>
                     </div>
                 </div>
-                <div class="suggestion-item"></div>
-                <div class="suggestion-item"></div>
+                <div class="suggestion-item">
+                    <div class="suggestion-item-content">
+                        <h3>h3</h3>
+                        <div class="suggestion-details"></div>
+                        <div><button class="btn-md">
+                            <i class="fa-solid fa-play"> Play Now</i>
+                        </button></div>
+                    </div>
+                </div>
+                <div class="suggestion-item">
+                    <div class="suggestion-item-content">
+                        <h3>h3</h3>
+                        <div class="suggestion-details"></div>
+                        <div><button class="btn-md">
+                            <i class="fa-solid fa-play"> Play Now</i>
+                        </button></div>
+                    </div>
+                </div>
             </div>
         </div>
         <div class="suggestions-row">
@@ -96,11 +135,29 @@
                     <div class="suggestion-item-content">
                         <h3>h3</h3>
                         <div class="suggestion-details"></div>
-                        <div><button class="btn-md"></button></div>
+                        <div><button class="btn-md">
+                            <i class="fa-solid fa-play"> Play Now</i>
+                        </button></div>
                     </div>
                 </div>
-                <div class="suggestion-item"></div>
-                <div class="suggestion-item"></div>
+                <div class="suggestion-item">
+                    <div class="suggestion-item-content">
+                        <h3>h3</h3>
+                        <div class="suggestion-details"></div>
+                        <div><button class="btn-md">
+                            <i class="fa-solid fa-play"> Play Now</i>
+                        </button></div>
+                    </div>
+                </div>
+                <div class="suggestion-item">
+                    <div class="suggestion-item-content">
+                        <h3>h3</h3>
+                        <div class="suggestion-details"></div>
+                        <div><button class="btn-md">
+                            <i class="fa-solid fa-play"> Play Now</i>
+                        </button></div>
+                    </div>
+                </div>
             </div>
         </div>
     </section>
