--- a/index.html
+++ b/index.html
@@ -19,8 +19,8 @@
             <a href="/">Topic 3</a>
             <a href="/">Topic 4</a>
         </nav>
-        <div class="search">
-            <div class="search-bar">
+        <div class="search header-flex">
+            <div class="search-bar header-flex">
                 <input type="search" placeholder="Search...">
                 <i class="fa-solid fa-magnifying-glass"></i>
             </div>
@@ -31,24 +31,32 @@
 
     <main>
         <div class="hero-content">
-            <h1>MOVIE NAME</h1>
+            <h1>DUNE: Part One</h1>
             <div class="movie-info">
                 <div class="user-ratings">
-                    <span class="user-rating">5</span>
-                    <span class="imdb-rating">7.3</span>
+                    <span class="user-rating">
+                        <i class="fa-solid fa-star"></i>
+                        <i class="fa-solid fa-star"></i>
+                        <i class="fa-solid fa-star"></i>
+                        <i class="fa-solid fa-star"></i>
+                        <i class="fa-solid fa-star"></i>
+                    </span>
+                    <span class="imdb-rating">8.0</span>
+                    <span class="imdb">IMDB</span>
                 </div>
-                <span class="maturity-rating">16+</span>
-                <span class="duration">2h 21min</span>
+                <span class="maturity-rating">13+</span>
+                <span class="duration">2h 35min</span>
             </div>
-            <p>paragraf</p>
+            <p>Paul Atreides arrives on Arrakis after his father accepts the stewardship of the dangerous planet. However, chaos ensues after a betrayal as forces clash to control melange, a precious resource.</p>
             <ul class="movie-details">
-                <li><span>Starring:</span></li>
-                <li><span>Genre:</span></li>
-                <li><span>Tags:</span></li>
+                <li><span>Starring:</span>Timothée Chalamet, Rebecca Ferguson, Zendaya</li>
+                <li><span>Genre:</span>Drama, Action, Adventure, Sci-Fi</li>
+                <li><span>Tags:</span>Desert Adventure, Sci-Fi Epic, Space Sci-Fi</li>
             </ul>
-            <div class=>
+            <div>
                 <button class="btn-lg">
-                    <i class="fa-solid fa-play"> Play Now</i>
+                    <i class="fa-solid fa-play"></i>
+                    <span>Play Now</span>
                 </button>
             </div>
         </div>
