--- a/index.html
+++ b/index.html
@@ -65,14 +65,16 @@
     <section>
         <div class="suggestions-row">
             <div class="suggestion-title">
-                <h2>h2</h2>
-                <a href="">a</a>
+                <h2>Popular Movies</h2>
             </div>
             <div class="suggestion-content">
                 <div class="suggestion-item">
                     <div class="suggestion-item-content">
-                        <h3>h3</h3>
-                        <div class="suggestion-details"></div>
+                        <h3>MOVIE 1</h3>
+                        <div class="suggestion-details">
+                            <span class="maturity-rating">13+</span>
+                            <span class="duration">2h 35min</span>
+                        </div>
                         <div><button class="btn-md">
                             <i class="fa-solid fa-play"> Play Now</i>
                         </button></div>
@@ -80,8 +82,11 @@
                 </div>
                 <div class="suggestion-item">
                     <div class="suggestion-item-content">
-                        <h3>h3</h3>
-                        <div class="suggestion-details"></div>
+                        <h3>MOVIE 2</h3>
+                        <div class="suggestion-details">
+                            <span class="maturity-rating">13+</span>
+                            <span class="duration">2h 35min</span>
+                        </div>
                         <div><button class="btn-md">
                             <i class="fa-solid fa-play"> Play Now</i>
                         </button></div>
@@ -89,8 +94,11 @@
                 </div>
                 <div class="suggestion-item">
                     <div class="suggestion-item-content">
-                        <h3>h3</h3>
-                        <div class="suggestion-details"></div>
+                        <h3>MOVIE 3</h3>
+                        <div class="suggestion-details">
+                            <span class="maturity-rating">13+</span>
+                            <span class="duration">2h 35min</span>
+                        </div>
                         <div><button class="btn-md">
                             <i class="fa-solid fa-play"> Play Now</i>
                         </button></div>
@@ -100,14 +108,16 @@
         </div>
         <div class="suggestions-row">
             <div class="suggestion-title">
-                <h2>h2</h2>
-                <a href="">a</a>
+                <h2>New Releases</h2>
             </div>
             <div class="suggestion-content">
                 <div class="suggestion-item">
                     <div class="suggestion-item-content">
-                        <h3>h3</h3>
-                        <div class="suggestion-details"></div>
+                        <h3>MOVIE 4</h3>
+                        <div class="suggestion-details">
+                            <span class="maturity-rating">13+</span>
+                            <span class="duration">2h 35min</span>
+                        </div>
                         <div><button class="btn-md">
                             <i class="fa-solid fa-play"> Play Now</i>
                         </button></div>
@@ -115,8 +125,11 @@
                 </div>
                 <div class="suggestion-item">
                     <div class="suggestion-item-content">
-                        <h3>h3</h3>
-                        <div class="suggestion-details"></div>
+                        <h3>MOVIE 5</h3>
+                        <div class="suggestion-details">
+                            <span class="maturity-rating">13+</span>
+                            <span class="duration">2h 35min</span>
+                        </div>
                         <div><button class="btn-md">
                             <i class="fa-solid fa-play"> Play Now</i>
                         </button></div>
@@ -124,8 +137,11 @@
                 </div>
                 <div class="suggestion-item">
                     <div class="suggestion-item-content">
-                        <h3>h3</h3>
-                        <div class="suggestion-details"></div>
+                        <h3>MOVIE 6</h3>
+                        <div class="suggestion-details">
+                            <span class="maturity-rating">13+</span>
+                            <span class="duration">2h 35min</span>
+                        </div>
                         <div><button class="btn-md">
                             <i class="fa-solid fa-play"> Play Now</i>
                         </button></div>
@@ -135,14 +151,16 @@
         </div>
         <div class="suggestions-row">
             <div class="suggestion-title">
-                <h2>h2</h2>
-                <a href="">a</a>
+                <h2>Recommended For You</h2>
             </div>
             <div class="suggestion-content">
                 <div class="suggestion-item">
                     <div class="suggestion-item-content">
-                        <h3>h3</h3>
-                        <div class="suggestion-details"></div>
+                        <h3>MOVIE 7</h3>
+                        <div class="suggestion-details">
+                            <span class="maturity-rating">13+</span>
+                            <span class="duration">2h 35min</span>
+                        </div>
                         <div><button class="btn-md">
                             <i class="fa-solid fa-play"> Play Now</i>
                         </button></div>
@@ -150,8 +168,11 @@
                 </div>
                 <div class="suggestion-item">
                     <div class="suggestion-item-content">
-                        <h3>h3</h3>
-                        <div class="suggestion-details"></div>
+                        <h3>MOVIE 8</h3>
+                        <div class="suggestion-details">
+                            <span class="maturity-rating">13+</span>
+                            <span class="duration">2h 35min</span>
+                        </div>
                         <div><button class="btn-md">
                             <i class="fa-solid fa-play"> Play Now</i>
                         </button></div>
@@ -159,8 +180,11 @@
                 </div>
                 <div class="suggestion-item">
                     <div class="suggestion-item-content">
-                        <h3>h3</h3>
-                        <div class="suggestion-details"></div>
+                        <h3>MOVIE 9</h3>
+                        <div class="suggestion-details">
+                            <span class="maturity-rating">13+</span>
+                            <span class="duration">2h 35min</span>
+                        </div>
                         <div><button class="btn-md">
                             <i class="fa-solid fa-play"> Play Now</i>
                         </button></div>
