--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <script src="https://kit.fontawesome.com/90f54d6ddf.js" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="src/css/reset.css">
     <link rel="stylesheet" href="src/css/style.css">
+    <link href="https://fonts.googleapis.com/css2?family=Afacad+Flux:wght@100..1000&family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&family=Montserrat:ital,wght@0,100..900;1,100..900&family=Noto+Sans:ital,wght@0,100..900;1,100..900&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap" rel="stylesheet">
     <title>WitFlix</title>
 </head>
 <body>
@@ -76,7 +77,8 @@
                             <span class="duration">2h 35min</span>
                         </div>
                         <div><button class="btn-md">
-                            <i class="fa-solid fa-play"> Play Now</i>
+                            <i class="fa-solid fa-play"></i>
+                            <span>Play Now</span>
                         </button></div>
                     </div>
                 </div>
@@ -88,7 +90,8 @@
                             <span class="duration">2h 35min</span>
                         </div>
                         <div><button class="btn-md">
-                            <i class="fa-solid fa-play"> Play Now</i>
+                            <i class="fa-solid fa-play"></i>
+                            <span>Play Now</span>
                         </button></div>
                     </div>
                 </div>
@@ -100,7 +103,8 @@
                             <span class="duration">2h 35min</span>
                         </div>
                         <div><button class="btn-md">
-                            <i class="fa-solid fa-play"> Play Now</i>
+                            <i class="fa-solid fa-play"></i>
+                            <span>Play Now</span>
                         </button></div>
                     </div>
                 </div>
@@ -119,7 +123,8 @@
                             <span class="duration">2h 35min</span>
                         </div>
                         <div><button class="btn-md">
-                            <i class="fa-solid fa-play"> Play Now</i>
+                            <i class="fa-solid fa-play"></i>
+                            <span>Play Now</span>
                         </button></div>
                     </div>
                 </div>
@@ -131,7 +136,8 @@
                             <span class="duration">2h 35min</span>
                         </div>
                         <div><button class="btn-md">
-                            <i class="fa-solid fa-play"> Play Now</i>
+                            <i class="fa-solid fa-play"></i>
+                            <span>Play Now</span>
                         </button></div>
                     </div>
                 </div>
@@ -143,7 +149,8 @@
                             <span class="duration">2h 35min</span>
                         </div>
                         <div><button class="btn-md">
-                            <i class="fa-solid fa-play"> Play Now</i>
+                            <i class="fa-solid fa-play"></i>
+                            <span>Play Now</span>
                         </button></div>
                     </div>
                 </div>
@@ -162,7 +169,8 @@
                             <span class="duration">2h 35min</span>
                         </div>
                         <div><button class="btn-md">
-                            <i class="fa-solid fa-play"> Play Now</i>
+                            <i class="fa-solid fa-play"></i>
+                            <span>Play Now</span>
                         </button></div>
                     </div>
                 </div>
@@ -174,7 +182,8 @@
                             <span class="duration">2h 35min</span>
                         </div>
                         <div><button class="btn-md">
-                            <i class="fa-solid fa-play"> Play Now</i>
+                            <i class="fa-solid fa-play"></i>
+                            <span>Play Now</span>
                         </button></div>
                     </div>
                 </div>
@@ -186,7 +195,8 @@
                             <span class="duration">2h 35min</span>
                         </div>
                         <div><button class="btn-md">
-                            <i class="fa-solid fa-play"> Play Now</i>
+                            <i class="fa-solid fa-play"></i>
+                            <span>Play Now</span>
                         </button></div>
                     </div>
                 </div>
@@ -196,25 +206,25 @@
    
     <footer>
         <div>
-            <nav>
+            <nav class="footer-head footer-head-aw">
                 <a href="/">Terms of Use</a>
-                <a href="/">Privacy Polciy</a>
+                <a href="/">Privacy Policy</a>
                 <a href="/">FAQ</a>
                 <a href="/">Watch List</a>
             </nav>
             <p class="copyright">This is copyrighted.</p>
         </div>
         <div>
-            <p>Follow Us</p>
-            <div>
+            <p class="footer-head">Follow Us</p>
+            <div class="footer-social">
                 <i class="fa-brands fa-facebook"></i>
                 <i class="fa-brands fa-youtube"></i>
                 <i class="fa-brands fa-twitter"></i>
             </div>
         </div>
         <div>
-            <p>Apps</p>
-            <div>
+            <p class="footer-head">Apps</p>
+            <div class="footer-apps">
                 <i class="fa-brands fa-apple"></i>
                 <i class="fa-brands fa-google-play"></i>
             </div>
