--- a/index.html
+++ b/index.html
@@ -217,16 +217,16 @@
         <div>
             <p class="footer-head">Follow Us</p>
             <div class="footer-social">
-                <i class="fa-brands fa-facebook"></i>
-                <i class="fa-brands fa-youtube"></i>
-                <i class="fa-brands fa-twitter"></i>
+                <a href="/"><i class="fa-brands fa-facebook"></i></a>
+                <a href="/"><i class="fa-brands fa-youtube"></i></a>
+                <a href="/"><i class="fa-brands fa-twitter"></i></a>
             </div>
         </div>
         <div>
             <p class="footer-head">Apps</p>
             <div class="footer-apps">
-                <i class="fa-brands fa-apple"></i>
-                <i class="fa-brands fa-google-play"></i>
+                <a href="/"><i class="fa-brands fa-apple"></i></a>
+                <a href="/"><i class="fa-brands fa-google-play"></i></a>
             </div>
         </div>
     </footer>
