--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
                         </button></div>
                     </div>
                 </div>
-                <div class="suggestion-item">
+                <div class="suggestion-item suggestion-item-hid">
                     <div class="suggestion-item-content">
                         <h3>MOVIE 2</h3>
                         <div class="suggestion-details">
@@ -95,7 +95,7 @@
                         </button></div>
                     </div>
                 </div>
-                <div class="suggestion-item">
+                <div class="suggestion-item suggestion-item-hid">
                     <div class="suggestion-item-content">
                         <h3>MOVIE 3</h3>
                         <div class="suggestion-details">
@@ -128,7 +128,7 @@
                         </button></div>
                     </div>
                 </div>
-                <div class="suggestion-item">
+                <div class="suggestion-item suggestion-item-hid">
                     <div class="suggestion-item-content">
                         <h3>MOVIE 5</h3>
                         <div class="suggestion-details">
@@ -141,7 +141,7 @@
                         </button></div>
                     </div>
                 </div>
-                <div class="suggestion-item">
+                <div class="suggestion-item suggestion-item-hid">
                     <div class="suggestion-item-content">
                         <h3>MOVIE 6</h3>
                         <div class="suggestion-details">
@@ -174,7 +174,7 @@
                         </button></div>
                     </div>
                 </div>
-                <div class="suggestion-item">
+                <div class="suggestion-item suggestion-item-hid">
                     <div class="suggestion-item-content">
                         <h3>MOVIE 8</h3>
                         <div class="suggestion-details">
@@ -187,7 +187,7 @@
                         </button></div>
                     </div>
                 </div>
-                <div class="suggestion-item">
+                <div class="suggestion-item suggestion-item-hid">
                     <div class="suggestion-item-content">
                         <h3>MOVIE 9</h3>
                         <div class="suggestion-details">
