final minor changes added
- view all added to the suggestion rows
- background img's brightness is lowered
- magnifying glass added to the searchbar
- footer fixed for mobile
- border for play now is changed

--- a/index.html
+++ b/index.html
@@ -32,33 +32,36 @@
 
     <main>
         <div class="hero-content">
-            <h1>DUNE: Part One</h1>
-            <div class="movie-info">
-                <div class="user-ratings">
-                    <span class="user-rating">
-                        <i class="fa-solid fa-star"></i>
-                        <i class="fa-solid fa-star"></i>
-                        <i class="fa-solid fa-star"></i>
-                        <i class="fa-solid fa-star"></i>
-                        <i class="fa-solid fa-star"></i>
-                    </span>
-                    <span class="imdb-rating">8.0</span>
-                    <span class="imdb">IMDB</span>
+            <img src="src/images/dune-img.jpg" alt="dune-img">
+            <div class="movie-big">
+                <h1>DUNE: Part One</h1>
+                <div class="movie-info">
+                    <div class="user-ratings">
+                        <span class="user-rating">
+                            <i class="fa-solid fa-star"></i>
+                            <i class="fa-solid fa-star"></i>
+                            <i class="fa-solid fa-star"></i>
+                            <i class="fa-solid fa-star"></i>
+                            <i class="fa-solid fa-star"></i>
+                        </span>
+                        <span class="imdb-rating">8.0</span>
+                        <span class="imdb">IMDB</span>
+                    </div>
+                    <span class="maturity-rating">13+</span>
+                    <span class="duration">2h 35min</span>
                 </div>
-                <span class="maturity-rating">13+</span>
-                <span class="duration">2h 35min</span>
-            </div>
-            <p>Paul Atreides arrives on Arrakis after his father accepts the stewardship of the dangerous planet. However, chaos ensues after a betrayal as forces clash to control melange, a precious resource.</p>
-            <ul class="movie-details">
-                <li><span>Starring:</span>Timothée Chalamet, Rebecca Ferguson, Zendaya</li>
-                <li><span>Genre:</span>Drama, Action, Adventure, Sci-Fi</li>
-                <li><span>Tags:</span>Desert Adventure, Sci-Fi Epic, Space Sci-Fi</li>
-            </ul>
-            <div>
-                <button class="btn-lg">
-                    <i class="fa-solid fa-play"></i>
-                    <span>Play Now</span>
-                </button>
+                <p>Paul Atreides arrives on Arrakis after his father accepts the stewardship of the dangerous planet. However, chaos ensues after a betrayal as forces clash to control melange, a precious resource.</p>
+                <ul class="movie-details">
+                    <li><span>Starring:</span>Timothée Chalamet, Rebecca Ferguson, Zendaya</li>
+                    <li><span>Genre:</span>Drama, Action, Adventure, Sci-Fi</li>
+                    <li><span>Tags:</span>Desert Adventure, Sci-Fi Epic, Space Sci-Fi</li>
+                </ul>
+                <div>
+                    <button class="btn-lg">
+                        <i class="fa-solid fa-play"></i>
+                        <span>Play Now</span>
+                    </button>
+                </div>
             </div>
         </div>
     </main>
@@ -67,6 +70,7 @@
         <div class="suggestions-row">
             <div class="suggestion-title">
                 <h2>Popular Movies</h2>
+                <a href="/">View All</a>
             </div>
             <div class="suggestion-content">
                 <div class="suggestion-item">
@@ -113,6 +117,7 @@
         <div class="suggestions-row">
             <div class="suggestion-title">
                 <h2>New Releases</h2>
+                <a href="/">View All</a>
             </div>
             <div class="suggestion-content">
                 <div class="suggestion-item">
@@ -159,6 +164,7 @@
         <div class="suggestions-row">
             <div class="suggestion-title">
                 <h2>Recommended For You</h2>
+                <a href="/">View All</a>
             </div>
             <div class="suggestion-content">
                 <div class="suggestion-item">
