--- a/index.html
+++ b/index.html
@@ -238,6 +238,7 @@
     </footer>
 
     </div>
-<script src="index.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
+    <script src="index.js"></script>
 </body>
 </html>
