added movie details via api

--- a/index.html
+++ b/index.html
@@ -74,6 +74,7 @@
             </div>
             <div class="suggestion-content">
                 <div class="suggestion-item">
+                    <img class="suggestion-img">
                     <div class="suggestion-item-content">
                         <h3>MOVIE 1</h3>
                         <div class="suggestion-details">
@@ -87,6 +88,7 @@
                     </div>
                 </div>
                 <div class="suggestion-item suggestion-item-hid">
+                    <img class="suggestion-img">
                     <div class="suggestion-item-content">
                         <h3>MOVIE 2</h3>
                         <div class="suggestion-details">
@@ -100,6 +102,7 @@
                     </div>
                 </div>
                 <div class="suggestion-item suggestion-item-hid">
+                    <img class="suggestion-img">
                     <div class="suggestion-item-content">
                         <h3>MOVIE 3</h3>
                         <div class="suggestion-details">
@@ -121,6 +124,7 @@
             </div>
             <div class="suggestion-content">
                 <div class="suggestion-item">
+                    <img class="suggestion-img">
                     <div class="suggestion-item-content">
                         <h3>MOVIE 4</h3>
                         <div class="suggestion-details">
@@ -134,6 +138,7 @@
                     </div>
                 </div>
                 <div class="suggestion-item suggestion-item-hid">
+                    <img class="suggestion-img">
                     <div class="suggestion-item-content">
                         <h3>MOVIE 5</h3>
                         <div class="suggestion-details">
@@ -147,6 +152,7 @@
                     </div>
                 </div>
                 <div class="suggestion-item suggestion-item-hid">
+                    <img class="suggestion-img">
                     <div class="suggestion-item-content">
                         <h3>MOVIE 6</h3>
                         <div class="suggestion-details">
@@ -168,6 +174,7 @@
             </div>
             <div class="suggestion-content">
                 <div class="suggestion-item">
+                    <img class="suggestion-img">
                     <div class="suggestion-item-content">
                         <h3>MOVIE 7</h3>
                         <div class="suggestion-details">
@@ -181,6 +188,7 @@
                     </div>
                 </div>
                 <div class="suggestion-item suggestion-item-hid">
+                    <img class="suggestion-img">
                     <div class="suggestion-item-content">
                         <h3>MOVIE 8</h3>
                         <div class="suggestion-details">
@@ -194,6 +202,7 @@
                     </div>
                 </div>
                 <div class="suggestion-item suggestion-item-hid">
+                    <img class="suggestion-img">
                     <div class="suggestion-item-content">
                         <h3>MOVIE 9</h3>
                         <div class="suggestion-details">
